# Ontology2Graph

./: .gitignore  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.txt  ERROR  First_generated_graph.ttl  First_instructions.txt  First_prompt_2025-08-29_17-28-44_Noria.ttl  First_prompt_2025-08-29_17-36-16_Noria.ttl  First_prompt_2025-08-29_17-41-12_Noria.ttl  First_prompt_2025-08-29_17-45-12_Noria.ttl  First_prompt_2025-08-29_17-53-11_Noria.ttl  First_prompt_2025-08-29_17-58-35_Noria.ttl  First_prompt_2025-08-29_18-09-01_Noria.ttl  First_prompt_2025-08-29_18-16-14_Noria.ttl  First_response.txt  GENERATE_CMD  Graph.ttl  LICENSE.txt  README.md  Second_generated_graph.ttl  Second_instructions.txt  Second_response.txt  Third_generated_graph.ttl  Third_instructions.txt  Third_response.txt  cron.logs  extract_nodes_from_files  find_duplicates_nodes  graph_kpis_display.py  graph_merging.py  graphgpt.py  graphllm.py  graphllm_kpi.py  instructions1.txt  instructions2.txt  launch_SKG_creation.sh  main.py  mkdocs.yml  pyproject.toml  (+6 more)
.github/workflows/: docs.yml
check_skg/: First_prompt_2025-10-07_09-14-08_Noria.ttl  Noria.ttl  check_skg.py  concat.ttl  concat2.ttl  concat_2025-10-17_17-01-50_Noria.ttl  concat_2025-10-17_17-12-19_CORRECTED_Noria.ttl  concat_2025-10-17_17-15-35_CORRECTED_Noria.ttl  concat_2025-10-17_17-15-35_Noria.ttl  concat_2025-10-17_17-23-56_Noria.ttl  concat_2025-10-17_17-28-38_Noria.ttl  concat_2025-10-17_17-39-30_Noria.ttl  concat_2025-10-21_11-11-27_Noria.ttl  concat_2025-10-21_11-15-16_Noria.ttl  concat_2025-10-21_11-25-37_Noria.ttl  concat_2025-10-21_11-29-28_Noria.ttl  concat_2025-10-21_11-33-07_Noria.ttl  concat_2025-10-21_11-36-57_Noria.ttl  concat_2025-10-21_11-40-36_Noria.ttl  concat_2025-10-21_11-47-27_Noria.ttl  concat_merged_0.ttl  concat_old.ttl  concatenated_file.ttl  diff  new_onto_graph.ttl  onto_graph.ttl  onto_graph_faulty.ttl  temp_graph.owl  temp_graph.owl4_1_AI_enhance_manually_2026-01-15_09-49-39_Noria.ttl  temp_graph.owl4_1_AI_enhance_manually_2026-01-15_09-51-26_Noria.ttl  temp_graph.owl4_1_AI_enhance_manually_2026-01-15_09-53-08_Noria.ttl  temp_graph.owl4_1_AI_enhance_manually_2026-01-15_09-54-02_Noria.ttl  temp_graph.owl4_1_AI_enhance_manually_2026-01-15_10-09-58_Noria.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-01-50_Noria.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-12-19_Noria.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-12-19_Noria_CORRECTED.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-12-19_Noria_NOT_CORRECTED.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-15-35_CORRECTED_Noria.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-15-35_Noria.ttl  temp_graph.owl4_1_prompt_fully_created_by_AI_2025-10-17_17-15-35_Noria_CORRECTED.ttl  (+12 more)
comparison_model_results/: README.md
comparison_model_results/Noria/: .First_graph_noria_2025-06-20_16-20-20_gemini-2.0-flash-001.ttl.swp  script.sh
display_graphs/: README.md  display_graphs.py  display_graphs_OLD.py
display_graphs/log_html/: new_method  (+1 more)
docs/: index.md
generate_graphs/: generate_grapllm.py
generate_ttl_files/: README.md  __init__.py  generate_ttl.py  temp_graph_4_1_AI_enhance_manually_2026-01-29_15-22-02_Noria_FORMATED.ttl
graph_kpis/: .output.csv.swp  example.graphml  graph_kpis.py  output.csv
graphs_generated/: README.md
graphs_generated_by_models/: README.md
graphs_series_generated/: concat_file.py
graphs_time_series_generated/: README.md  build_time_series.py  plot_line_charts.py  robots_cmd.py
merge_graphs/: merge_graphs.py
merge_ttl_files/: README.md  merge_ttl.py  nodenames  utils.py
model/: models.txt
prompt/: First_prompt.txt
prompts/: README.md  Third_prompt.txt
results/: First_generated_graph.ttl  README.md  Third_generated_graph.ttl  Third_generated_graph2.ttl  Third_graph_claude-3-5-sonnet-v2@20241022.ttl  Third_graph_claude-3-7-sonnet@20250219.ttl  Third_graph_gemini-1.5-pro.ttl  Third_graph_gemini-2.0-flash-001.ttl  Third_graph_gemini-2.0-flash-001.txt  Third_graph_gpt-4o-2024-11-20.ttl  Third_graph_o4-mini-2025-04-16.ttl  claude-3.7.ttl  comparison_table.md  gemini-1.5-pro_measure.csv  graphhllm_KPI.py  graphhllm_kpi.py  transpose_kpis.py
test/: diff  result
utils_common/: README.md  __init__.py  extract_nodes_from_files.py  find_duplicates_nodes.py  nodes.csv  nodes3.csv  nodes3stem.csv  test_duplicates_occurrence.py  utils.py  utils_com.py  validate_ttl.py
(+2477 files in other folders)
